tests/health/gold/sdk/tests__lsp__type_definition_test.toit.gold
tests/lsp/type_definition_test.toit:95:8: error: Invalid type
bad -> fun:
       ^~~
tests/lsp/type_definition_test.toit:101:9: error: Invalid type
bad x / fun:
        ^~~
tests/lsp/type_definition_test.toit:108:30: error: Invalid type
bad2 -> prefix.ImportedClass.named:
                             ^~~~~
tests/lsp/type_definition_test.toit:114:19: error: Ambiguous resolution of type: 'ImportedClass'
bad3 -> ambiguous.ImportedClass:
                  ^~~~~~~~~~~~~
tests/lsp/definition_imported.toit:5:7: note: Resolution candidate for 'ImportedClass'
class ImportedClass:
      ^~~~~~~~~~~~~
tests/lsp/definition_imported2.toit:9:7: note: Resolution candidate for 'ImportedClass'
class ImportedClass:
      ^~~~~~~~~~~~~
tests/lsp/type_definition_test.toit:120:19: error: Invalid type
bad4 -> SomeClass.static_fun:
                  ^~~~~~~~~~
tests/lsp/type_definition_test.toit:126:19: error: Invalid type
bad5 -> SomeClass.static_fun:
                  ^~~~~~~~~~
tests/lsp/type_definition_test.toit:132:19: error: Invalid type
bad6 -> SomeClass.non_existent:
                  ^~~~~~~~~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
